# eloquent

./: .gitignore  Cargo.toml  README.md
analysis/: analyzer.ipynb  output.json
analysis/tests/: README.md
docs/: DESIGN.md
keyboard/: Cargo.toml
keyboard/src/: lib.rs
plots/: Cargo.toml
sa-gen/: Cargo.toml
sa-gen/src/: main.rs
sim/: Cargo.toml
sim/benches/: regular.rs
sim/src/: lib.rs  main.rs  speeds.rs
speedtest/: Cargo.toml  speeds_empty.json
speedtest/src/: instructions.rs  lib.rs  main.rs  results.rs  speedtest.rs  ui.rs
text/: downloader.py  shrink.py  text.txt
trainer/: Cargo.toml
trainer/src/: main.rs
